--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
+    "lz-string": "^1.4.4",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
